Mi intento falló, pero tento sueño ya v:

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1> Este es un mensaje para una persona muy especial</h1>
 <p> Y es creado para decirle con mucho amor un par de cosas </p>
 <p> Que me gusta mucho y que la quiero mucho </p>
-<p><img src="https://i.imgur.com/gS8Tcic.jpg" 20px 20px /></p>
+<p><img src="https://i.imgur.com/gS8Tcic.jpg" /></p>
